Scaled up the size of the snow icon

--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -46,6 +46,7 @@ input {
     padding-left: 25px;
     border: none;
     height: 50px;
+    width: 250px;
     outline: none;
     cursor: pointer;
 }
