--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -18,6 +18,7 @@
 .weather img {
     filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.8)); /* Soft glow */
 }
+
 .weather:hover {
     transform: scale(1.03);
     box-shadow: 0px 4px 15px rgba(255, 255, 255, 0.2);
@@ -49,6 +50,15 @@ input {
     width: 250px;
     outline: none;
     cursor: pointer;
+}
+input:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 4px 15px rgba(255, 255, 255, 0.2);
+
+}
+button:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 4px 15px rgba(255, 255, 255, 0.2);
 }
 .submit-button {
     border-radius: 30px;
